新增遮色片效果範例

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "vue/no-unused-components": "off"
+      "vue/no-unused-components": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
